--- a/package.json
+++ b/package.json
@@ -3,5 +3,8 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1"
+  },
+  "scripts": {
+    "serve": "nodemon app.js"
   }
 }
